[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ambient/door/crate.png" type="Texture" id=1]
[ext_resource path="res://scenes/ambient/door/Door.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 32 )

[node name="Door" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 3.8147e-06 )
scale = Vector2( 1, 2.90909 )
texture = ExtResource( 1 )

[node name="OpenPosition" type="Node2D" parent="."]
position = Vector2( 0, 64 )

[node name="EnterPosition" type="Node2D" parent="."]
position = Vector2( 24, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="EnterArea" type="Area2D" parent="."]
position = Vector2( 16, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterArea"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
disabled = true

[connection signal="body_entered" from="EnterArea" to="." method="_on_EnterArea_body_entered"]
